# AiCoder

./: .gitignore  AIcoder-RPC协议工程化方案.md  CHANGELOG.md  ClaudeCode化改造建议.md  Ink改造TUI实施方案.md  LangGraph重构后端实施方案.md  README.md  ai_coder_intro.html  cats.html  pyproject.toml  requirements.txt  run.py  slash命令联想详细修改方案.md  原始：  可执行修复文档.md  改造完成度专项收尾报告.md  更新后（更 casual）：  源码解析.md  项目分析报告.md  项目改进建议报告.md
.github/workflows/: ci.yml
aicoder/: __main__.py  agent_app_runner.py  agent_events.py  agent_history_rebuilder.py  agent_history_truncator.py  agent_runtime.py  agent_step_store.py  approval.py  commands.py  config.py  context_manager.py  exceptions.py  history.py  io.py  llm.py  main.py  message_pipeline.py  mode_definitions.py  models.py  permission_modes.py  prompts.py  repo.py  repomap.py  rpc_io.py  session.py  tool_schema_builder.py  tui_app.py  utils.py  项目分析报告.md
aicoder-tui/: package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
aicoder-tui/docs/: typecheck-triage.md
aicoder-tui/src/: App.tsx  index.tsx  tui.ts
aicoder-tui/themes/: dark.json  opencode.json
aicoder/coders/: __init__.py  architect_coder.py  architect_prompts.py  ask_coder.py  ask_prompts.py  base_coder.py  base_prompts.py  editblock_coder.py  editblock_prompts.py  message_builder.py  wholefile_coder.py  wholefile_prompts.py
aicoder/context/: __init__.py  condense.py  history_view.py  packer.py  policies.py  repo_map.py  repo_ranker.py  repo_renderer.py  repo_types.py  snapshot.py  summarizer.py  summary_store.py  summary_types.py  tool_trace_policy.py
aicoder/debug/: __init__.py  condense_trace.py  context_trace.py  dump_helpers.py
aicoder/docs/: permission-matrix.md  runtime-unification.md  tool-inventory-report.md  tool-system-design-report.md  tool-system-feasibility-report.md
aicoder/events/: __init__.py  backend.py  file_store.py  replay.py  serializer.py  store.py  types.py
aicoder/graph/: __init__.py  checkpointer.py  events.py  interrupts.py  nodes.py  state.py  workflow.py
aicoder/langchain_runtime/: __init__.py  agent.py  interactive.py  middleware.py  model.py  schemas.py  session.py  tools.py
aicoder/messages/: __init__.py  conversion.py  types.py
aicoder/modes/: __init__.py  config.py
aicoder/parsers/: __init__.py  base.py  cot_json_action_parser.py  cot_xml_tool_parser.py  function_call_parser.py
aicoder/personas/: __init__.py
aicoder/plugins/: __init__.py  loader.py
aicoder/recovery/: __init__.py  checkpoint_guard.py  engine.py  policy.py
aicoder/runners/: __init__.py  base_agent_runner.py  cot_agent_runner.py  function_calling_agent_runner.py
aicoder/session/: __init__.py  federation.py  restore_bundle.py
aicoder/sniffing/: __init__.py  recon_summary.py
aicoder/tests/: conftest.py  test_agent_events.py  test_agent_history_rebuilder.py  test_agent_history_truncator.py  test_agent_runtime.py  test_agent_step_store.py  test_approval.py  test_checkpoint_audit_trace.py  test_checkpoint_recovery.py  test_coder_init.py  test_commands.py  test_condense.py  test_config.py  test_context_packer.py  test_cot_json_action_parser.py  test_cot_xml_tool_parser.py  test_debug_modules.py  test_editblock_coder.py  test_event_observation.py  test_event_persistence.py  test_event_replay.py  test_event_store.py  test_fc_history_persistence.py  test_fc_param_normalization.py  test_federation_budget.py  test_federation_debug.py  test_federation_replay.py  test_function_call_parser.py  test_graph_act.py  test_graph_federation_flow.py  test_graph_observation.py  test_graph_permissions.py  test_graph_state.py  test_graph_workflow.py  test_history_view.py  (+37 more)
docs/: aiCoder-v1.2-实现级任务拆解.md  aiCoder-v1.3-实现级任务拆解.md  aiCoder-v1.4-实现级任务拆解.md  aiCoder-v1.5-实现级任务拆解.md  aiCoder-v1.6-实现级任务拆解.md  aiCoder-v1.6.1-PR-合并说明.md  aiCoder-v1.6.1-实现级任务拆解.md  aiCoder-v1.7-实现级任务拆解.md  aiCoder-三模式重构方案-v1.1-实现级任务拆解.md  aicoder-agent-runner-refactor-design-v1.md  aicoder-tool-error-observation-minimal-remediation.md  architecture-consolidation-remediation-spec.md  baseline-backend-state.md  iteration-1-summary.md  langchain-runtime-approval-interrupt-plan.md  langchain-runtime-interactive-loop-plan.md  langchain-runtime-migration-overall-plan.md  langchain-runtime-phase-1-execution-plan.md  langchain-runtime-phase-1-glm-prompt.md  langchain-runtime-session-checkpoint-plan.md  langchain-runtime-status.md  langchain-runtime-tools-contract.md  milestone-1-backend-mainline-consolidation.md  milestone-2-tui-compilable.md  milestone-3-ci-and-docs-closure.md  milestone1-completion-report.md  post-milestone-fixes.md  remove-shit-persona-plan.md  rpc-protocol.md  sniff-mode-design.md  sniff-mode-implementation-plan.md  sniff-recon-optimization-plan.md  sniff-spirit-mode-plan.md  sniff-structured-recon-prd.md  sniff-structured-recon-task-cards.md  tool-error-observation-remediation-completion-report.md
scripts/: smoke_test.sh
(+116 files in other folders)
