[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rune"
version = "0.6.0"
description = "Rune — AI pair programming CLI tool. Launch from any directory; uses current directory as workspace."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
authors = [
    {name = "AiCoder contributors"},
]
keywords = ["ai", "coding", "cli", "pair-programming", "llm", "litellm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.0.0",
    "gitpython>=3.1.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-languages>=1.8.0",
    "grep-ast>=0.3.0",
    "networkx>=3.0",
    "pygments>=2.15.0",
    "textual>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/example/aicoder"
Repository = "https://github.com/example/aicoder"
Issues = "https://github.com/example/aicoder/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aicoder", "aicoder.*"]

[project.scripts]
rune = "aicoder.main:main"

[tool.setuptools.package-data]
aicoder = ["queries/**/*.scm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
