[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicoder"
version = "0.6.0"
description = "AiCoder — AI pair programming CLI tool. Launch from any directory; uses current directory as workspace."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache-2.0"}
authors = [
    {name = "AiCoder contributors"},
]
keywords = ["ai", "coding", "cli", "pair-programming", "llm", "litellm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.0.0",
    "gitpython>=3.1.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.8.0",
    "grep-ast>=0.3.0",
    "networkx>=3.0",
    "pygments>=2.15.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/20212661/AiCoder"
Repository = "https://github.com/20212661/AiCoder"
Issues = "https://github.com/20212661/AiCoder/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aicoder", "aicoder.*"]

[project.scripts]
aicoder = "aicoder.main:main"

[tool.setuptools.package-data]
aicoder = ["queries/**/*.scm"]

[tool.pytest.ini_options]
testpaths = ["aicoder/tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may use filesystem, git, etc.)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "A", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["aicoder"]
omit = ["aicoder/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
